# parlor

./: .gitignore  .semgrepignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  VISION.md  codecov.yml  demo_workflow.yaml  mkdocs.yml  package.json  pyproject.toml
.claude/commands/: code-review.md  commit.md  deploy.md  dev-help.md  ideate.md  new-issue.md  pr-check.md  start-work.md  submit-pr.md  write-docs.md
.claude/rules/: commit-format.md  feature-parity.md  no-code-without-issue.md  output-formatting.md  product-vision.md  readme-maintenance.md  security-patterns.md  test-requirements.md
.gemini/commands/: cleanup.toml  code-review.toml  commit.toml  deploy.toml  dev-help.toml  ideate.toml  new-issue.toml  next.toml  pr-check.toml  review.toml
.github/workflows/: codeql-analysis.yml  docs.yml  publish-pypi.yml  publish.yml  test.yml
demos/: Makefile  README.md  exec-mode.tape  quickstart.tape  tools.tape
docs/: index.md  start-here.md
docs/advanced/: architecture.md  changelog.md  contributing.md  developer-workflow.md  testing.md  workflows.md
docs/api/: config.md  conversations.md  index.md  messages.md  projects.md  usage.md
docs/assets/stylesheets/: extra.css
docs/cli/: commands.md  context-management.md  file-references.md  index.md  porting-from-claude-code.md  project-instructions.md  skill-examples.md  skills.md  tools.md
docs/configuration/: config-file.md  environment-variables.md  index.md  mcp-servers.md  team-config.md  tls.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/knowledge/: config-reference.md  how-rag-works.md  index.md
docs/packs/: api-reference.md  artifact-types.md  concepts.md  config-reference.md  health-check.md  how-packs-work.md  index.md  lock-file.md  manifest-format.md  pack-commands.md  pack-sources.md  quickstart.md  troubleshooting.md
docs/packs/tutorials/: automatic-updates.md  ci-cd-integration.md  create-pack-from-scratch.md  health-check-diagnosis.md  install-first-pack.md  manage-conflicts.md  share-pack-via-git.md  team-standardization.md
docs/security/: authentication.md  dlp.md  hardening.md  index.md  tool-safety.md
docs/spaces/: api-reference.md  commands.md  concepts.md  config-overlay.md  config-reference.md  hot-reload.md  index.md  quickstart.md  repo-management.md  space-file-format.md  troubleshooting.md
docs/spaces/tutorials/: custom-config.md  multi-repo.md  team-space.md
docs/tutorials/: add-mcp-tools.md  build-custom-skills.md  connect-to-azure.md  connect-to-ollama.md  connect-to-openrouter.md  create-project-evals.md
docs/web-ui/: attachments.md  conversations.md  index.md  keyboard-shortcuts.md  projects.md  shared-databases.md  spaces.md  streaming.md  themes.md
docs/workflows/: api-reference.md  commands.md  concepts.md  definitions.md  index.md  monitoring.md  quickstart.md
evals/: README.md  agentic.yaml  promptfoo.yaml  redteam.yaml
evals/prompts/: system-behavior.yaml
evals/rag/: conftest.py  dataset.yaml  test_rag_retrieval.py
src/anteroom/: __init__.py  __main__.py  app.py  config.py  db.py  identity.py  models.py  tls.py
src/anteroom/cli/: agent_turn.py  commands.py  completer.py  config_tui.py  dialogs.py  exec_mode.py  instructions.py  keybindings.py  layout.py  pickers.py  plan.py  renderer.py  repl.py  setup.py  skills.py  textual_app.py  workflow_cli.py
src/anteroom/routers/: approvals.py  artifacts.py  chat.py  config_api.py  conversations.py  databases.py  events.py  packs.py  plan.py  projects.py  proxy.py  search.py  sources.py  spaces.py  workflows.py
src/anteroom/services/: agent_loop.py  ai_service.py  anthropic_provider.py  approvals.py  artifact_health.py  artifact_import.py  artifact_registry.py  artifact_storage.py  (+54 more)
src/parlor/: __init__.py  __main__.py  app.py  config.py  db.py  models.py
tests/: conftest.py
tests/contract/: test_slash_command_client_matrix.py  test_slash_command_parity.py
tests/e2e/: conftest.py  test_agent_evals.py  test_auth_upgrade.py  test_focus_fold_agent_loop_cli.py  test_focus_fold_agent_loop_web.py  test_legacy_cli_pty.py  test_mcp_approval.py  test_mcp_cli.py  test_mcp_cli_approval.py  test_mcp_subagent.py  test_mcp_web.py  test_slash_commands_web.py  test_slash_commands_web_snapshots.py  test_sources_e2e.py  test_subagent_loading.py  test_ui_approval.py  test_ui_focus_fold.py  test_ui_reprocess.py  test_ui_smoke.py  test_ui_source_scope.py  test_ui_sources.py  test_ui_welcome.py  test_ui_workflow_regression.py  test_ui_workflows.py
tests/integration/: test_config_tui_pty.py  test_pack_api.py  test_pack_integration.py  test_queue_flow.py  test_repl_approval_prompt.py  test_repl_approval_pty.py  test_repl_cancel_recovery.py  test_repl_completions.py  test_repl_config.py  test_repl_focus_fold.py  test_repl_packs.py  test_repl_reprocess.py  test_repl_space_sources.py  test_repl_theme.py  test_repl_welcome.py  test_workflow_cli.py  test_workflow_progress_cli.py  test_workflow_regression.py  test_workflow_resume_cli.py
tests/js/: approval.test.js  chat.focus-fold.test.js
tests/manual/: test_example_packs.sh
tests/ui_scenarios/: __init__.py  textual_scenarios.py
tests/unit/: test_a_help_contract.py  test_agent_loop_ask_user.py  test_agent_loop_phases.py  test_ai_service.py  test_anthropic_provider.py  test_app_approvals_integration.py  test_app_factory.py  test_approval_output.py  test_approval_serialization.py  test_approvals.py  test_approvals_router.py  test_artifact_cli.py  test_artifact_import.py  test_artifacts.py  test_artifacts_router.py  test_ask_user.py  test_audit.py  test_auth_token.py  test_auto_plan.py  test_bash_sandbox.py  test_bash_windows.py  test_bug_regressions_689.py  test_canvas_storage.py  test_canvas_streaming.py  test_canvas_tool.py  test_chat_comprehensive.py  test_chat_router.py  test_chat_stale_streams.py  test_chat_upload.py  test_cli_commands.py  test_cli_drain.py  test_cli_init.py  test_cli_utils.py  test_codebase_index.py  test_commands.py  test_completer.py  test_compliance.py  test_config.py  test_config_api_router.py  test_config_editor.py  (+141 more)
(+135 files in other folders)
